samples/_failures_safe/1761249648_8d34e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_503c6bc0.c: In function ‘main’:
./samples/SAFE/__tmp_503c6bc0.c:149:5: error: expected declaration or statement at end of input
  149 |     }
      |     ^
